--- a/index.html
+++ b/index.html
@@ -71,4 +71,16 @@
       </div>
       <div class="col-md-4 mb-4">
         <div class="card">
-          <img src="https://via.placeholder.com/400x250" class
+          <img src="https://via.placeholder.com/400x250" class ="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Lost Item 2</h5>
+            <p class="card-text">Description of lost item 2</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  </div>
+  <script src="script.js"></script>
+</body>
+</html>
